# Stackoverflow-Scraping

./: .gitignore  Cargo.toml  EXPLAIN.md  README.md
output/: 483071.csv  483072.csv  483073.csv  483074.csv  483075.csv  483076.csv  483077.csv  483078.csv  483079.csv  483080.csv  483081.csv  483082.csv  483083.csv  483084.csv  483085.csv  483086.csv  483087.csv  483088.csv  483089.csv  483090.csv  483091.csv  483092.csv  483093.csv  483094.csv  483095.csv  483096.csv  483097.csv  483098.csv  483099.csv  483100.csv  483101.csv  483102.csv  483103.csv  483104.csv  483105.csv  483106.csv  483107.csv  483108.csv  483109.csv  483110.csv  (+1337 more)
output/questions/: 483468.csv  483469.csv  483470.csv  483471.csv  483472.csv  483473.csv  483474.csv  483475.csv  483476.csv  483477.csv  483478.csv  483479.csv  483480.csv  483481.csv  483482.csv  483483.csv  483484.csv  483485.csv  483486.csv  483487.csv  483488.csv  483489.csv  483490.csv  483491.csv  483492.csv  483493.csv  483494.csv  483495.csv  483496.csv  483497.csv  483498.csv  483499.csv  483500.csv  483501.csv  483502.csv  483503.csv  483504.csv  483505.csv  483506.csv  483507.csv  (+60 more)
src/: main.rs
src/supportscript/: database.rs  fileops.rs  mod.rs  questionsvalue.rs
