[package]
name = "Stackoverflow-Scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "0.13.1"
tokio = {version = "1.49.0", features = ["full"]}
scraper = "0.25.0"
rand = "0.9.2"
tokio-postgres = "0.7.16"
postgres-native-tls = "0.5.2"
native-tls = "0.2.14"
chrono = "0.4.43"
dotenv = "0.15.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"